# SDLGhostEscape-Course

./: .gitmodules  CMakeLists.txt
GhostEscape/: CMakeLists.txt  main.cpp  scene_main.cpp  scene_main.h
GhostEscape/GhostEscape/: main.cpp  player.cpp  player.h  scene_main.cpp  scene_main.h
GhostEscape/GhostEscape/core/: actor.h  asset_store.cpp  asset_store.h  game.cpp  game.h  object_screen.cpp  object_screen.h  object_world.cpp  object_world.h  scene.cpp  scene.h
GhostEscape/core/: game.cpp  game.h  object.cpp  object.h  scene.cpp  scene.h
cmake/: deps.cmake
